2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* object.h (folio_object_alloc): Return a struct cap, not void.
	Remove the objectp parameter.  Update all users.
	* object.c (folio_object_alloc): Return a capability designating
	the new object.  Don't take a location in which to store the
	new object.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* thread.h (THREAD_WAIT_STATS): Define.
	* server.c (server_loop): Update implementation of activity_stats
	to handle the new parameter, until_period.  If the current period
	is less than UNTIL_PERIOD, queue the caller on PRINCIPAL and do
	not reply.
	* ager.c: Include "thread.h".
	(ager_loop): When generating an activity's statistics, if a thread
	is waiting for the statistic, send it reply.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): When we need a principal, use PRINCIPAL,
	not ACTIVITY.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_desc_claim): Fix debug statement, ACTIVITY may
	be NULL.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* mutex.h (ss_mutex_lock): Wait for any local thread.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* rm.h (rm_method_id_string): Handle the case where ID is
	RM_activity_stats.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_flush): Take additional parameter,
	clear_kernel.  If true, fetch the status bits corresponding to
	Viengoos even if the dirty bit is set.  Update callers.

	* pager.c (is_clean): More thoroughly check that a page alleged to
	be clean is really all zeros.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* rm.h (rm_method_id_string): Handle the case where ID is
	RM_object_status.
	* server.c (server_loop): Implement the object_status method.

	* ager.c (ager_loop): Set DESC->USER_DIRTY and DESC->REFERENCED as
	appropriate.
	* object.c (folio_object_alloc): Clear ODESC->USER_REFERENCED and
	ODESC->USER_DIRTY.
	(folio_object_alloc): Clear the object's user referenced and user
	dirty bits.